--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,8 @@
 
 :root{
   --dark-color: #212529;
-  /* #138989 */
   --brand-color: #138989;
   --brand-color-light: #6970dd;
-  /* --brand-color-rgb: 78, 87, 212; */
   --brand-color-rgb: 19, 137, 137;
   --body-color: #727272;
   --box-shadow: 0px 15px 25px rgba(0,0,0,0.08);
@@ -35,6 +33,7 @@ a{
 img{
   max-width: 100%;
   height: auto;
+  object-fit: cover;
 }
 
 .section-padding{
@@ -65,11 +64,15 @@ img{
   box-shadow: var(--box-shadow);
 }
 
+html, body{
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 body{
   font-family: 'Rethink Sans', sans-serif;
   line-height: 1.7;
   color: var(--body-color);
-  overflow-x: hidden;
 }
 
 /* NAVBAR */
@@ -93,6 +96,13 @@ body{
 
 .navbar-nav .nav-link.active{
   color: #f4f4f4;
+}
+
+.navbar-toggler{
+  background: transparent;
+  outline: none;
+  appearance: none;
+  border: none;
 }
 
 /* HERO */
@@ -204,12 +214,6 @@ body{
   background-size: cover;
 }
 
-/* CLIENTS */
-.client-logo{
-  display: block;
-  margin: auto;
-}
-
 /* GALLERY */
 .image-zoom{
   position: relative;
@@ -219,6 +223,11 @@ body{
 .image-zoom-wrapper{
   overflow: hidden;
   position: relative;
+}
+
+.image-zoom-wrapper img{
+  height: 250px;
+  object-fit: cover;
 }
 
 .image-zoom-wrapper img{
@@ -245,10 +254,6 @@ body{
   opacity: 1;
   top: 50%;
 }
-
-
-
-
 
 /* TESTIMONIALS */
 .testimonial-item .testimonial-header{
